[workspace]
members = ["tower-sesh", "tower-sesh-*"]
resolver = "2"

[workspace.package]
authors = []
license = "MIT"
readme = "README.md"
categories = ["asynchronous", "web-programming"]
keywords = ["axum", "session", "tower"]
edition = "2021"
rust-version = "1.82.0"

[workspace.dependencies]
serde = { version = "1", default-features = false, features = ["std"] }

[workspace.lints]


[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
