[workspace]
members = [
    "tower-sesh",
    "tower-sesh-*",

    # Internal
    "benches",
]
resolver = "2"

[workspace.package]
authors = ["loqusion <loqusion@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/loqusion/tower-sesh"
categories = ["asynchronous", "web-programming"]
keywords = ["axum", "session", "tower"]
edition = "2021"
rust-version = "1.79.0"

[workspace.dependencies]
rand = { version = "0.9", default-features = false }
serde = { version = "1", default-features = false, features = ["std"] }

[workspace.lints]


[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
