[workspace]
members = [
    "tower-sesh",
    "tower-sesh-*",

    # Internal
    "benches",
]
resolver = "2"

[workspace.package]
authors = ["loqusion <loqusion@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/loqusion/tower-sesh"
categories = ["asynchronous", "web-programming"]
keywords = ["axum", "session", "tower"]
edition = "2021"
rust-version = "1.81.0"

[workspace.dependencies]
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
rand = { version = "0.9", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["std"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tower_sesh_docs_local)'] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
