[package]
name = "benches"
version = "0.0.0"
publish = false
license.workspace = true
edition.workspace = true

[features]
full = ["store-redis"]
store-redis = ["dep:tower-sesh-store-redis"]

[dependencies]
async-trait = "=0.1.88"
axum = { version = "=0.8.3", default-features = false }
dashmap = "=6.1.0"
divan = "=0.1.18"
http = "=1.3.1"
rand = { version = "=0.9.0", default-features = false, features = ["std", "thread_rng"] }
rust_decimal = { version = "=1.37.1", default-features = false, features = ["std", "serde"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "1.0.139"
time = { version = "=0.3.41", features = ["formatting", "parsing"] }
tokio = { version = "=1.44.2", features = ["full"] }
tower = "=0.5.2"
tower-sesh = { path = "../tower-sesh", features = ["memory-store"] }
tower-sesh-core = { path = "../tower-sesh-core" }
tower-sesh-store-redis = { path = "../tower-sesh-store-redis", optional = true }
tower-sessions = { version = "=0.14.0", default-features = false, features = ["axum-core"] }
tower-sessions-core = { version = "=0.14.0", default-features = false, features = ["axum-core"] }

[[bench]]
name = "middleware"
path = "middleware.rs"
harness = false

[[bench]]
name = "stores"
path = "stores.rs"
harness = false
