[package]
name = "tower-sesh-core"
description = """
Core components for `tower-sesh` and related crates.
"""
version = "0.1.0-alpha.2"
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1.83"
base64 = "0.22.1"
rand = "0.8.5"
time = "0.3.37"

[dev-dependencies]
insta = "1.42.1"
quickcheck = "1.0.3"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.138"

[features]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
