[package]
name = "tower-sesh-core"
description = """
Core components for `tower-sesh` and related crates.
"""
version = "0.1.0-alpha.3"
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
log = ["tracing/log"]

[dependencies]
async-trait = { workspace = true }
base64 = "0.22.1"
rand = { workspace = true, features = ["thread_rng"] }
time = { version = "0.3", features = ["local-offset"] }

# optional dependencies
tracing = { workspace = true, optional = true }

[dev-dependencies]
http = "1"
insta = "1.42.1"
quickcheck = "1.0.3"
rand_chacha = "0.9.0"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.138"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
