[package]
name = "tower-sesh-store-redis"
description = """
Redis store for `tower-sesh`.
"""
version = "0.1.0-alpha.1"
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["tokio-comp"]

async-std-comp = ["redis/async-std-comp"]
tokio-comp = ["redis/tokio-comp"]

[dependencies]
async-trait = "0.1.83"
futures = "0.3.31"
redis = { version = "0.27.6", features = ["aio", "connection-manager"] }
rmp-serde = "1.3.0"
serde = { workspace = true }
thiserror = "2.0.7"
tower-sesh-core = { version = "=0.1.0-alpha.1", path = "../tower-sesh-core" }

[dev-dependencies]
anyhow = "1.0.94"
tokio = { version = "1.42.0", features = ["full"] }
tokio-test = "0.4.4"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-udeps.ignore]
development = ["tokio-test"]
