[package]
name = "tower-sesh-store-redis"
description = """
Redis store for `tower-sesh`.
"""
version = "0.1.0-alpha.3"
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["tokio-comp"]

test-util = []

async-std-comp = ["redis/async-std-comp"]
tokio-comp = ["redis/tokio-comp"]

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
parking_lot = "0.12.3"
rand = { workspace = true }
redis = { version = "0.27.6", default-features = false, features = [
    "aio",
    "connection-manager",
    "keep-alive",
] }
rmp-serde = "1.3.0"
serde = { workspace = true }
tower-sesh-core = { version = "=0.1.0-alpha.3", path = "../tower-sesh-core" }

[dev-dependencies]
anyhow = "1.0.94"
rand_chacha = "0.9.0"
tokio = { version = "1.42.0", features = ["full"] }
tokio-test = "0.4.4"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-udeps.ignore]
development = ["tokio-test"]
