[package]
name = "tower-sesh-test"
version = "0.0.0"
publish = false
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
paste = "1.0.15"
rand = { workspace = true }
rand_chacha = "0.9.0"
tokio = "1.43.0"
tower-sesh = { path = "../tower-sesh" }
tower-sesh-core = { path = "../tower-sesh-core" }

[lints]
workspace = true
