[package]
name = "tower-sesh"
description = """
A Tower middleware for strongly typed, efficient sessions.
"""
version = "0.1.0-alpha.3"
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["axum", "tracing"]

[dependencies]
async-once-cell = "0.5.4"
async-trait = "0.1.83"
cookie = { version = "0.18.1", features = [
    "signed",
    "private",
    "percent-encode",
] }
dashmap = "6.0.0"
futures = "0.3.31"
http = "1"
itoa = "1.0.14"
parking_lot = { version = "0.12.3" }
pin-project-lite = "0.2.15"
rand = { workspace = true, features = ["thread_rng"] }
ryu = "1.0.18"
serde = { workspace = true }
time = "0.3.37"
tower = "0.5.2"
tower-sesh-core = { version = "=0.1.0-alpha.3", path = "../tower-sesh-core" }

# optional dependencies
axum = { version = "0.7.9", optional = true }
tracing = { version = "0.1.41", optional = true }

[dev-dependencies]
insta = "1.42.0"
serde_json = "1.0.136"
tokio = { version = "1.42.0", features = ["full"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
