[package]
name = "tower-sesh"
description = """
A Tower middleware for strongly typed, efficient sessions.
"""
version = "0.1.0-alpha.3"
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["axum", "memory-store", "tracing", "value"]

log = ["tracing", "tracing/log"]
memory-store = ["dep:dashmap"]
value = ["dep:itoa", "dep:ryu", "dep:serde"]

[dependencies]
async-once-cell = "0.5.4"
async-trait = { workspace = true }
cookie = { version = "0.18.1", features = ["signed", "private", "percent-encode"] }
futures = { workspace = true, features = ["async-await"] }
http = "1"
parking_lot = { version = "0.12.3" }
rand = { workspace = true, features = ["thread_rng"] }
tower = "0.5.2"
tower-sesh-core = { version = "=0.1.0-alpha.3", path = "../tower-sesh-core" }

# optional dependencies
axum = { version = "0.7.9", optional = true, default-features = false }
dashmap = { version = "6.0.0", optional = true }
itoa = { version = "1.0.14", optional = true }
ryu = { version = "1.0.18", optional = true }
serde = { workspace = true, optional = true }
tracing = { version = "0.1", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
axum = { version = "0.7.9", default-features = false }
insta = "1.42.0"
serde_json = "1.0.136"
tokio = { version = "1.42.0", features = ["full"] }
tracing-mock = "0.1.0-beta.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
